# RewardMe

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
database/: config.json  createDB.sql  database.py  db.py  json_utils.py
design/: howitworks.txt
includes/: button.hpp
src/: button.cpp  login.cpp  main.cpp
utils/: json_utils.py
